--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "sass": "^1.32.6"
   },
   "devDependencies": {
     "autoprefixer": "10.0.2",
