--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "matootie.com",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "matootie's website.",
   "scripts": {
     "develop": "next",
+    "prebuild": "git lfs fetch origin --all",
     "build": "next build",
-    "distribute": "next build && next export -o dist/",
+    "postbuild": "echo Hello, world!",
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "next": "latest",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^4.1.0",
-    "sass": "^1.32.6"
+    "@headlessui/react": "^0.3.1",
+    "next": "^10.0.9",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "10.0.2",
     "postcss": "^8.1.13",
     "tailwindcss": "^2.0.2"
