--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.2.1",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
     "autoprefixer": "10.0.2",
     "postcss": "^8.1.13",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.2.4"
   },
   "license": "UNLICENSED",
   "private": true
