--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
   "name": "matootie.com",
-  "version": "1.0.0",
   "description": "matootie's website.",
   "scripts": {
     "develop": "next",
     "build": "next build",
-    "postbuild": "echo Hello, world!",
-    "start": "next start"
+    "postbuild": "next-sitemap --config lib/sitemap.js",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,json,yml,yaml,html}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,md,json,yml,yaml,html}\""
   },
   "dependencies": {
-    "@headlessui/react": "^0.3.1",
-    "next": "^10.0.9",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@headlessui/react": "^1.4.0",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.2.1",
-    "@types/node": "^14.14.41",
-    "@types/react": "^17.0.3",
-    "autoprefixer": "10.0.2",
-    "postcss": "^8.1.13",
-    "tailwindcss": "^2.0.2",
-    "typescript": "^4.2.4"
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
+    "@types/yamljs": "^0.2.31",
+    "autoprefixer": "^10.3.1",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "gray-matter": "^4.0.3",
+    "next-sitemap": "^1.6.148",
+    "postcss": "^8.3.6",
+    "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.7",
+    "typescript": "^4.3.5",
+    "yamljs": "^0.3.0"
   },
   "license": "UNLICENSED",
   "private": true
