--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
+    "ioredis": "^4.27.7",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@types/ioredis": "^4.26.7",
     "@types/node": "^16.4.13",
     "@types/react": "^17.0.16",
     "@types/yamljs": "^0.2.31",
