--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "remark": "^14.0.1",
+    "remark-html": "^15.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "@types/ioredis": "^4.26.7",
     "@types/node": "^16.4.13",
     "@types/react": "^17.0.16",
