--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
     "ioredis": "^4.27.7",
+    "moment": "^2.29.1",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
+    "remark-html": "^15.0.0",
+    "remark-plain-text": "^0.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.1",
