Update .devcontainer configurations

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
   ],
   "forwardPorts": [3000],
   "postCreateCommand": "npm install",
-  "remoteUser": "matootie",
+  "remoteUser": "node",
   "features": {
     "git": "latest",
     "git-lfs": "latest"
