Clean up codebase

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,16 +3,20 @@
   "dockerComposeFile": "docker-compose.yml",
   "service": "website",
   "workspaceFolder": "/workspace",
-  "settings": {},
-  "extensions": [
-    "dbaeumer.vscode-eslint",
-    "csstools.postcss",
-    "esbenp.prettier-vscode",
-    "bradlc.vscode-tailwindcss"
-  ],
+  "customizations": {
+    "vscode": {
+      "settings": {},
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "csstools.postcss",
+        "esbenp.prettier-vscode",
+        "bradlc.vscode-tailwindcss"
+      ]
+    }
+  },
   "forwardPorts": [3000],
-  "postCreateCommand": "npm install",
-  "remoteUser": "node",
+  "postCreateCommand": "npm i",
+  "remoteUser": "me",
   "features": {
     "git": "latest",
     "git-lfs": "latest"
