--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-API_URL=https://matootie-cms.herokuapp.com
-REDIS_URL=redis://localhost
+VERCEL_ORG_ID=9AHNxWYnUMwqwL4lC6iWW3ZH
+VERCEL_PROJECT_ID=prj_5s2jRYLJwXVjlr8ZfOVkAhLGuSlL
+VERCEL_TOKEN=qlrFdlyDA1GsGRZlX6KqUVli
