--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,3 @@
-ARG VARIANT="16-bullseye"
-FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-${VARIANT}
+FROM ghcr.io/matootie/devcontainer:v1.2.0
 
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
-
-# RUN su node -c "npm install -g <your-package-list-here>"
+RUN su me -c "fish /usr/local/lib/utils/node.fish"
