--- a/package.json
+++ b/package.json
@@ -1,47 +1,40 @@
 {
-  "name": "matootie.com",
-  "description": "matootie's website.",
-  "scripts": {
-    "develop": "next",
-    "build": "next build",
-    "postbuild": "next-sitemap --config lib/sitemap.js",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,json,yml,yaml,html}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,md,json,yml,yaml,html}\""
+  "eslintConfig": {
+    "extends": [
+      "next/core-web-vitals",
+      "prettier"
+    ]
+  },
+  "prettier": {
+    "singleQuote": false,
+    "trailingComma": "all",
+    "semi": false
+  },
+  "postcss": {
+    "plugins": {
+      "tailwindcss": {
+        "config": "./config/tailwind.config.js"
+      },
+      "autoprefixer": {}
+    }
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.4",
-    "ioredis": "^4.27.7",
-    "moment": "^2.29.2",
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "remark": "^14.0.1",
-    "remark-html": "^15.0.0",
-    "remark-plain-text": "^0.2.0"
+    "next": "^12.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.2.2",
-    "@tailwindcss/typography": "^0.4.1",
-    "@types/ioredis": "^4.26.7",
-    "@types/node": "^16.4.13",
-    "@types/react": "^17.0.16",
-    "@types/yamljs": "^0.2.31",
-    "autoprefixer": "^10.3.1",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "gray-matter": "^4.0.3",
-    "next-sitemap": "^1.6.148",
-    "postcss": "^8.3.6",
-    "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.7",
-    "typescript": "^4.3.5",
-    "yamljs": "^0.3.0"
+    "@types/node": "18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.11",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.3"
   },
-  "license": "UNLICENSED",
-  "private": true
+  "scripts": {
+    "vercel-build": "next build"
+  }
 }
