--- a/package.json
+++ b/package.json
@@ -18,18 +18,26 @@
       "autoprefixer": {}
     }
   },
+  "lint-staged": {
+    "*": "prettier --check --ignore-unknown",
+    "*.{js,ts}": "eslint"
+  },
   "dependencies": {
     "next": "^12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@types/node": "18.7.18",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
